fix(antd-icon): override verticle align in tailwindcss

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18583,6 +18583,10 @@ video {
   border-radius: 0.25rem;
 }
 
+svg {
+  vertical-align: baseline;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
